Fix an issue where the locate button might be covered by the iOS navigation bar

--- a/src/components/MapControls/MapControls.module.css
+++ b/src/components/MapControls/MapControls.module.css
@@ -12,6 +12,7 @@
 }
 
 .topRight {
+    position: fixed;
     top: 1.0rem;
     right: 1.0rem;
 }
